--- a/index.html
+++ b/index.html
@@ -8,46 +8,46 @@
 </head>
 <body>
 	<header>
-		<section class="top-line hed-line">
+		<section class="top_line hed_line">
 			<img src="./img/icon/phone.svg" alt="⎙">
 			<p>8 (812) 123-45-67   |   Работаем 7 дней в неделю   |   9:00 — 18:00</p>
 			<img src="./img/icon/log-in.svg" alt="⎙">
 			<p>Войти / Регистрация</p>
 		</section>
-		<section class="second-line hed-line">
-			<p>PORTEN</p>
+		<section class="second_line hed_line">
+			<a href="">PORTEN</a>
 			<a href="">ПОНРАВИЛОСЬ</a>
 			<a href="">ЛИЧНЫЙ КАБИНЕТ</a>
 			<a href="">НАСТРОЙКИ</a>
-			<img src="./img/icon/bx-cart.svg" alt="⎙">
-			<img src="./img/icon/search.svg" alt="⎙">
+			<a class="hed_img_link" href=""><img src="./img/icon/bx-cart.svg" alt="⎙"></a>
+			<a class="hed_img_link" href=""><img src="./img/icon/search.svg" alt="⎙"></a>
 		</section>
-		<section class="first-screen">
+		<section class="first_screen">
 			<div></div>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.</p>
 		</section>
 	</header>
 	<main>
 		<section class="season_collection">
-			<div>
+			<div class="main_blocks">
 				<p class="season_collection_text">СЕЗОН 2020/21</p>
 				<hr align="center" width="120" size="1" color="#FFFFFF" />
 				<ul>
-					<li class="watch-collection">
+					<li class="watch_collection">
 						<div>
 							<img src="./img/fons/watch.png" alt="⎙">
 						</div>
 						<p>Louis XVI ATHOS</p>
 						<p>165 000 руб.</p>
 					</li>
-					<li class="watch-collection">
+					<li class="watch_collection">
 						<div>
 							<img src="./img/fons/watch.png" alt="⎙">
 						</div>
 						<p>Louis XVI ATHOS</p>
 						<p>165 000 руб.</p>
 					</li>
-					<li class="watch-collection">
+					<li class="watch_collection">
 						<div>
 							<img src="./img/fons/watch.png" alt="⎙">
 						</div>
@@ -56,10 +56,19 @@
 					</li>
 				</ul>
 			</div>
-			<div>
+			<div class="main_blocks">
 				<p class="season_collection_text">НОВАЯ КОЛЛЕКЦИЯ</p>
 				<hr align="center" width="120" size="1" color="#FFFFFF" />
-				<button>КАТАЛОГ</button>
+				<button class="season_collection_button">КАТАЛОГ</button>
+			</div>
+		</section>
+		<section class="year_collection">
+			<img src="./img/fons/Rectangle_9.png" alt="⎙">
+			<div class="main_blocks">
+				<p class="season_collection_text">КОЛЛЕКЦИЯ 2018</p>
+				<hr align="center" width="120" size="1" color="#FFFFFF" />
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. </p>
+				<button class="season_collection_button">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</button>
 			</div>
 		</section>
 	</main>	
