--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<header>
-		<section class="top_line hed_line">
+		<section class="top_line hed_foot_line">
 			<img src="./img/icon/phone.svg" alt="⎙">
 			<p>8 (812) 123-45-67   |   Работаем 7 дней в неделю   |   9:00 — 18:00</p>
 			<img src="./img/icon/log-in.svg" alt="⎙">
 			<p>Войти / Регистрация</p>
 		</section>
-		<section class="second_line hed_line">
+		<section class="second_line hed_foot_line">
 			<a href="">PORTEN</a>
 			<a href="">ПОНРАВИЛОСЬ</a>
 			<a href="">ЛИЧНЫЙ КАБИНЕТ</a>
@@ -32,7 +32,7 @@
 			<div class="main_blocks">
 				<p class="season_collection_text">СЕЗОН 2020/21</p>
 				<hr align="center" width="120" size="1" color="#FFFFFF" />
-				<ul>
+				<ul class="watch_list">
 					<li class="watch_collection">
 						<div>
 							<img src="./img/fons/watch.png" alt="⎙">
@@ -71,7 +71,87 @@
 				<button class="season_collection_button">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</button>
 			</div>
 		</section>
+		<section class="new_goods_brands">
+			<p class="season_collection_text">НОВЫЕ ПОСТУПЛЕНИЯ</p>
+			<hr align="center" width="120" size="1" color="#FFFFFF" />
+			<ul class="watch_list">
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+				<li class="watch_collection">
+					<div>
+						<img src="./img/fons/watch.png" alt="⎙">
+					</div>
+					<p>Louis XVI ATHOS</p>
+					<p>165 000 руб.</p>
+				</li>
+			</ul>
+		</section>
 	</main>	
-	<footer></footer>
+	<footer>
+		<section class="new_goods_brands">
+			<p class="season_collection_text">НАШИ БРЕНДЫ</p>
+			<hr align="center" width="120" size="1" color="#FFFFFF" />
+			<div>
+				<div class="brands_img"></div>
+				<div class="brands_img"></div>
+				<div class="brands_img"></div>
+				<div class="brands_img"></div>
+			</div>
+		</section>
+		<section class="footer_compani">
+			
+		</section>
+		<section class="footer_last_line hed_foot_line">
+			<p>© 2024 Все права защищены</p>
+			<a href="https://t.me/Lib_int">Сделал Lib_int</a>
+		</section>
+	</footer>
 </body>
 </html>
