Завершение основной части работы
Возможны доработки

--- a/index.html
+++ b/index.html
@@ -146,7 +146,28 @@
 			</div>
 		</section>
 		<section class="footer_compani">
-			
+			<div>
+				<p class="season_collection_text">О МАГАЗИНЕ</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet, porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi, nunc.</p>			
+			</div>
+			<div>
+				<p class="season_collection_text">КАТЕГОРИИ</p>
+				<div>				
+					<button>часы</button>
+					<button>браслеты</button>
+					<button>ремни</button>
+					<button>ювелирные изделия</button>
+					<button>запонки</button>				
+				</div>
+			</div>
+			<div>
+				<p class="season_collection_text">РАССЫЛКА</p>
+				<form>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.</p>
+					<input type="email" id="email" placeholder="Ваша почта"> 
+					<input type="submit" id="button" value="ПОДПИСАТЬСЯ">				
+				</form>
+			</div>
 		</section>
 		<section class="footer_last_line hed_foot_line">
 			<p>© 2024 Все права защищены</p>
